--- a/Library-of-Congress.html
+++ b/Library-of-Congress.html
@@ -118,11 +118,11 @@
         <div class="row lightbox-gallery">
           <div class="col-lg-8 ">
             <h2 class="title bottom_30">Website Navigation</h2>
-            <p>In this project I looked into the Library of Congress's website. My goal was to not only prototype a
-              responsive website for the library, but to think of the limitations that were implemented, and necessary,
-              in the original design. The basic navigation of the site was surprisingly coherent but among its negative
-              aspects there was a lack of visual hierarchy. The website in general was functional yet not very intuitive
-              when indicating where was the content coming from, and at times it was quite overwhelming. </p>
+            <p>In this project I sought to improve navigation on the website of the United States Library of Congress,
+              when studying the page I realized that the information architecture was surprisingly coherent, once you
+              give it a chance. However, the lack of visual hierarchy complicates navigation. The page in general was
+              not very difficult to understand but it was not as intuitive as possible, with respect to helping the user
+              to orient themselves within so much information; which at times became overwhelming.</p>
           </div>
           <div class="col-lg-4 ">
             <h2 class="title bottom_30">Credits</h2>
