--- a/es-Library-of-Congress.html
+++ b/es-Library-of-Congress.html
@@ -123,11 +123,11 @@
         <div class="row lightbox-gallery">
           <div class="col-lg-8 ">
             <h2 class="title bottom_30">Navegación Web</h2>
-            <p>En este proyecto busque mejorar la navegación en la pagina web de la biblioteca del congreso de los
+            <p>En este proyecto busqué mejorar la navegación en la pagina web de la biblioteca del congreso de los
               Estados Unidos, al estudiar la pagina me di cuenta que la arquitectura de la información era
               sorprendentemente coherente, una ves le das una oportunidad. Sin embargo la falta de jerarquía visual
-              hacia la navegación complicada. La pagina en general no era muy difícil de entender pero no era lo mas
-              intuitiva con respecto a ayudar al usuario a orientarse dentro de tanta información; la cual por momentos
+              complica la navegación. La pagina en general no era muy difícil de entender pero no era lo mas intuitiva
+              posible, con respecto a ayudar al usuario a orientarse dentro de tanta información; la cual por momentos
               se volvía abrumadora.</p>
           </div>
           <div class="col-lg-4 ">
