CV download working

--- a/es.html
+++ b/es.html
@@ -356,7 +356,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/ Verastegui_Septiembre_(2020).pdf" download>
+          <a href="/cv/CV_Peter_Verastegui_Septiembre_(2020).pdf" target="popup" download>
             <button class="site-btn" data-tilt> Descargar CV
               <i class="icon ion-md-arrow-down"></i>
             </button>
