--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/Resume_Peter Verastegui_September_(2020).pdf" target="_blank" download>
+          <a href="/cv/Resume_Peter_Verastegui_September_(2020).pdf" target="_blank" download>
             <button class="site-btn" data-tilt> Download Resume
               <i class="icon ion-md-arrow-down"></i>
             </button>
