A lot of Galaxy Changes
Cool

--- a/USA-Today.html
+++ b/USA-Today.html
@@ -354,7 +354,7 @@
 
     <!-- footer -->
     <section id="contact" data-midnight="dark" class="dark-bg">
-      <div class="container project-detail padtop_30">
+      <div class="container project-detail wow padtop_30">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
             <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
@@ -367,10 +367,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
