--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -143,25 +143,29 @@
     </div>
 
     <!-- Tabs -->
+    <div data-midnight="dark" class="dark-bg sticky-top container padding_20  galaxy-bg-purple-light">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2 project-detail">
+          <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
 
+              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
+                aria-controls="pills-home" aria-selected="true">1: Documentando processos
+              </a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#two" role="tab"
+                aria-controls="pills-profile" aria-selected="false">2: Diseñando y iterando soluciones</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#three" role="tab"
+                aria-controls="pills-profile" aria-selected="false">3: Con una interfaz intuitiva y simple</a>
+            </li>
+          </ul>
+        </div>
+      </div>
 
-    <ul class="nav nav-pills nav-fill col-lg-8 sticky-top project-detail container galaxy-bg-purple-light padding_20"
-      id="pills-tab" role="tablist">
-      <li class="nav-item" role="presentation">
-
-        <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
-          aria-controls="pills-home" aria-selected="true">1: Documentando processos
-        </a>
-      </li>
-      <li class="nav-item" role="presentation">
-        <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#two" role="tab" aria-controls="pills-profile"
-          aria-selected="false">2: Diseñando y iterando soluciones</a>
-      </li>
-      <li class="nav-item" role="presentation">
-        <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#three" role="tab"
-          aria-controls="pills-profile" aria-selected="false">3: Con una interfaz intuitiva y simple</a>
-      </li>
-    </ul>
+    </div>
 
     <div class="tab-content" id="pills-tabContent">
       <div class="tab-pane fade active show" id="one" role="tabpanel">
