--- a/Galaxy.html
+++ b/Galaxy.html
@@ -143,23 +143,29 @@
     <!-- Tabs -->
 
 
-    <ul class="nav nav-pills nav-fill col-lg-8 sticky-top project-detail container galaxy-bg-purple-light padding_20"
-      id="pills-tab" role="tablist">
-      <li class="nav-item" role="presentation">
+    <div data-midnight="dark" class="dark-bg sticky-top container padding_20  galaxy-bg-purple-light">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2 project-detail">
+          <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
 
-        <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
-          aria-controls="pills-home" aria-selected="true">1: Mapping requests
-        </a>
-      </li>
-      <li class="nav-item" role="presentation">
-        <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#two" role="tab" aria-controls="pills-profile"
-          aria-selected="false">2: Designig & Iterating</a>
-      </li>
-      <li class="nav-item" role="presentation">
-        <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#three" role="tab"
-          aria-controls="pills-profile" aria-selected="false">3: Intuitive & Simple UI</a>
-      </li>
-    </ul>
+              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
+                aria-controls="pills-home" aria-selected="true">1: Mapping Requests
+              </a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#two" role="tab"
+                aria-controls="pills-profile" aria-selected="false">2: Disigning & Iteraring</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#three" role="tab"
+                aria-controls="pills-profile" aria-selected="false">3: Intuitive & Simple UI</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
 
 
 
