--- a/Galaxy.html
+++ b/Galaxy.html
@@ -149,16 +149,16 @@
           <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
 
-              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
+              <a class="nav-link" id="white-link" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
                 aria-controls="pills-home" aria-selected="true">1: Mapping Requests
               </a>
             </li>
             <li class="nav-item" role="presentation">
-              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#two" role="tab"
+              <a class="nav-link" id="white-link" data-toggle="pill" href="#two" role="tab"
                 aria-controls="pills-profile" aria-selected="false">2: Disigning & Iteraring</a>
             </li>
             <li class="nav-item" role="presentation">
-              <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#three" role="tab"
+              <a class="nav-link" id="white-link" data-toggle="pill" href="#three" role="tab"
                 aria-controls="pills-profile" aria-selected="false">3: Intuitive & Simple UI</a>
             </li>
           </ul>
