--- a/Shop.html
+++ b/Shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Wender Portfolio Template</title>
+    <title>Peter Verastegui | Portofolio</title>
     <meta charset="UTF-8">
     <meta name="description" content="Peter Verastegui's Portofolio">
     <meta name="keywords" content="personal, portfolio">
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!--[if lt IE 9]>
-  	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  	<![endif]-->
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
     <!-- FAVICON  -->
     <link rel="shortcut icon" href="img/favico.png">
@@ -26,6 +26,7 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+
 
 </head>
 
@@ -45,9 +46,7 @@
 
     <main>
 
-
-        <!-- HEADER
-================================================== -->
+        <!-- Header -->
         <header>
             <a href="index.html" class="logo float-left"></a>
             <div class="menu float-right">
@@ -65,24 +64,22 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="#home">HOME</a>
+                            <a href="index.html#portfolio">Portfolio</a>
                         </li>
                         <li class="scroll">
-                            <a href="#about">ABOUT</a>
+                            <a href="index.html#about">About</a>
                         </li>
                         <li class="scroll">
-                            <a href="#portfolio">PORTFOLIO</a>
+                            <a href="index.html#resume">Resume</a>
                         </li>
                         <li class="scroll">
-                            <a href="#clients">CLIENTS</a>
-                        </li>
-                        <li class="scroll">
-                            <a href="#contact">CONTACT</a>
+                            <a href="index.html#contact">Contact Information</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
 
         <!-- Up to top -->
         <div class="uptotop">
@@ -93,7 +90,8 @@
         </div>
 
 
-        <!-- ABOUT SECTION
+
+        <!-- SHOP SECTION
 ================================================== -->
         <section id="about" class="white-bg" data-midnight="white">
             <div class="container">
@@ -229,32 +227,37 @@
 
 
 
-
-        <!-- FOOTER
-================================================== -->
-        <footer data-midnight="dark">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
-                        <div class="social top_15 bottom_45">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter" aria-hidden="true"></i> </a>
-                            <a href="#"><i class="fab fa-behance" aria-hidden="true"></i> </a>
-                            <a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i> </a>
-                            <a href="#"><i class="fab fa-instagram" aria-hidden="true"></i> </a>
-                        </div>
+        <!-- footer -->
+        <section id="contact" data-midnight="dark" class="dark-bg">
+            <div class="container project-detail wow padtop_30">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-4">
+                        <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p>Say hello at <a href="mailto:soonlabs@soonlabs.com">soonlabs@soonlabs.com</a></p>
-                        <p class="copyright">2019 © Wender Template. Design by <a
-                                href="http://www.soonlabs.com">Soonlabs.</a></p>
+
+                    <div class="col-lg-2 bottom_30">
+                        <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="tel:+1571-295-1415">+1 571 295 1415</a>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
+                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
+                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
+                                class="fab fa-instagram" aria-hidden="true"></i> </a>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <p class="copyright">© Peter Verastegui</p>
                     </div>
                 </div>
             </div>
-        </footer>
-
+            </div>
+        </section>
 
     </main>
 
