--- a/Galaxy.html
+++ b/Galaxy.html
@@ -146,18 +146,18 @@
     <div data-midnight="dark" class="dark-bg sticky-top container padding_20  galaxy-bg-purple-light">
       <div class="row">
         <div class="col-lg-8 offset-lg-2 project-detail">
-          <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
+          <ul class="nav nav-pills nav-fill white-link navmenu" id="pills-tab" role="tablist">
+            <li class="nav-item scroll" role="presentation">
 
               <a class="nav-link" id="white-link" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
                 aria-controls="pills-home" aria-selected="true">1: Mapping Requests
               </a>
             </li>
-            <li class="nav-item" role="presentation">
+            <li class="nav-item scroll" role="presentation">
               <a class="nav-link" id="white-link" data-toggle="pill" href="#two" role="tab"
                 aria-controls="pills-profile" aria-selected="false">2: Disigning & Iteraring</a>
             </li>
-            <li class="nav-item" role="presentation">
+            <li class="nav-item scroll" role="presentation">
               <a class="nav-link" id="white-link" data-toggle="pill" href="#three" role="tab"
                 aria-controls="pills-profile" aria-selected="false">3: Intuitive & Simple UI</a>
             </li>
