--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
               <a href="#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
+              <a href="Shop.html">Shop</a>
+            </li>
+            <li class="scroll">
               <a href="#about">About</a>
             </li>
             <li class="scroll">
