--- a/es.html
+++ b/es.html
@@ -260,7 +260,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30">UX Designer,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
+          <p class="padbot_30">Diseñador UX,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
 
 
         </div>
@@ -268,7 +268,7 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30">UX Designer,<br> Ene. 2018 – Feb 2019,<br> Washington, D. C., EE. UU.</p>
+          <p class="padbot_30">Diseñador UX,<br> Ene. 2018 – Feb 2019,<br> Washington, D. C., EE. UU.</p>
 
 
         </div>
@@ -356,7 +356,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/CV_Peter_Verastegui_Septiembre_(2020).pdf" target="popup" download>
+          <a href="/cv/CV_Peter_Verastegui_Octubre_(2020).pdf" target="popup" download>
             <button class="site-btn" data-tilt> Descargar CV
               <i class="icon ion-md-arrow-down"></i>
             </button>
