--- a/es.html
+++ b/es.html
@@ -57,6 +57,9 @@
           <span></span>
         </div>
       </div>
+      <div class="float-right">
+        <a class="text-white px-4" href="index.html">English</a>
+      </div>
     </header>
 
     <!-- Navigation -->
