--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <span></span>
         </div>
       </div>
+      <div class="float-right">
+        <a class="text-white px-4" href="es.html">Español</a>
+      </div>
     </header>
 
     <!-- Navigation -->
