--- a/toucan/index.html
+++ b/toucan/index.html
@@ -243,7 +243,7 @@
     <div class="container padtop_30">
       <div class="row">
         <div class="col-lg-12 padding_30">
-          <p class="copyright text-center text-white">© Toucan</p>
+          <p class="copyright text-center text-color">© Toucan</p>
         </div>
 
       </div>
