New Breaking Point!
Thanks boostrap V5

--- a/toucan/index.html
+++ b/toucan/index.html
@@ -48,7 +48,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
-<body id="page-top" class="padding_30_sides bg-color">
+<body id="page-top" class="bg-color">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-color fixed-top" id="mainNav">
@@ -113,7 +113,7 @@
   <section id="works" class="padtop_60">
     <div class="container">
       <div class="row">
-        <div class="col masonry m-0">
+        <div class="col masonry">
           <div class="item">
             <a href="work-1.html">
               <img loading="lazy" class="work-thumbnail d-block w-100 mt-4" src="img/works/work-3/work-3-thumbnail.jpg">
