--- a/toucan/post.html
+++ b/toucan/post.html
@@ -126,9 +126,9 @@
         </div>
 
         <!-- ======= Masonry Layout Gallery ======= -->
-        <div class="row p-0">
+        <div class="row">
             <!-- ======= Images ======= -->
-            <div class="col masonry m-0">
+            <div class="col masonry">
                 <div class="item">
                     <a href="#lightbox" data-toggle="modal" data-slide-to="0">
                         <img src="https://peterveras.github.io/photography/images/photos/IMG_3648.jpg"
