NEw breaking point

--- a/toucan/blog.html
+++ b/toucan/blog.html
@@ -126,19 +126,20 @@
                         </div>
                         <div class="col-lg-6">
                             <a href="post.html" target="_blank" class="text-color-x">
-                                <h2 class="text-color-x">Post Sample</h2>
+                                <h2 class="text-color-x no-underline">Post Sample</h2>
                             </a>
                             <p class="text-color-x">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Reiciendis
                                 aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis
                                 animi vero voluptate voluptatibus possimus, veniam magni...</p>
-                            <a href="post.html" target="_blank" class="text-color-x">
-                                Read More &rarr;
+                            <a href="post.html" target="_blank">
+                                <button class="primary-btn-exception">Read More &rarr;
+                                </button>
                             </a>
                         </div>
                     </div>
                     <div class="text-muted">
-                        <p class="m-0 text-color-x">Posted on January 1, 2017</p>
+                        <p class="m-0 text-color-x pt-2">Posted on January 1, 2017</p>
                     </div>
                 </div>
             </div>
@@ -153,22 +154,22 @@
                         </div>
                         <div class="col-lg-6">
                             <a href="tabs.html" target="_blank" class="text-color-x">
-                                <h2 class="text-color-x">Tabs Sample</h2>
+                                <h2 class="text-color-x no-underline">Tabs Sample</h2>
                             </a>
                             <p class="text-color-x">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Reiciendis
                                 aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis
                                 animi vero voluptate voluptatibus possimus, veniam magni...</p>
-                            <a href="tabs.html" target="_blank" class="text-color-x">
-                                Read More &rarr;
+                            <a href="tabs.html" target="_blank">
+                                <button class="primary-btn-exception">Read More &rarr;
+                                </button>
                             </a>
                         </div>
                     </div>
                     <div class="text-muted">
-                        <p class="m-0 text-color-x">Posted on January 1, 2017</p>
+                        <p class="m-0 text-color-x pt-2">Posted on January 1, 2017</p>
                     </div>
                 </div>
-
             </div>
             <!-- Blog Post -->
             <div class="card mb-4">
@@ -180,21 +181,22 @@
                             </a>
                         </div>
                         <div class="col-lg-6">
-                            <a href="work-1.html" target="_blank">
-                                <h2 class="text-color-x">Work Sample 1</h2>
+                            <a href="work-1.html" target="_blank" class="text-color-x">
+                                <h2 class="text-color-x no-underline">Work Sample 1</h2>
                             </a>
                             <p class="text-color-x">Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit.
                                 Reiciendis
                                 aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis
                                 animi vero voluptate voluptatibus possimus, veniam magni...</p>
-                            <a href="work-1.html" target="_blank" class="text-color-x">
-                                Read More &rarr;
+                            <a href="work-1.html" target="_blank">
+                                <button class="primary-btn-exception">Read More &rarr;
+                                </button>
                             </a>
                         </div>
                     </div>
                     <div class="text-muted">
-                        <p class="m-0 text-color-x">Posted on January 1, 2017</p>
+                        <p class="m-0 text-color-x pt-2">Posted on January 1, 2017</p>
                     </div>
                 </div>
             </div>
@@ -204,29 +206,29 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <a href="work-2.html">
-                                <img class="img-fluid pb-3" src="img/blog/blog-img-4.png" alt="">
+                                <img class="img-fluid pb-3" src="img/blog/blog-img-2.png" alt="">
                             </a>
                         </div>
                         <div class="col-lg-6">
-                            <a href="work-2.html" target="_blank" class="text-color-x">
-                                <h2 class="text-color-x">Work Sample 2</h2>
+                            <a href="tabs.html" target="_blank" class="text-color-x">
+                                <h2 class="text-color-x no-underline">Work Sample 2</h2>
                             </a>
-                            <p class="text-color-x">Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit.
+                            <p class="text-color-x">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Reiciendis
                                 aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis
                                 animi vero voluptate voluptatibus possimus, veniam magni...</p>
-                            <a href="work-2.html" target="_blank" class="text-color-x">
-                                Read More &rarr;
+                            <a href="work-2.html" target="_blank">
+                                <button class="primary-btn-exception">Read More &rarr;
+                                </button>
                             </a>
                         </div>
                     </div>
                     <div class="text-muted">
-                        <p class="m-0 text-color-x">Posted on January 1, 2017</p>
+                        <p class="m-0 text-color-x pt-2">Posted on January 1, 2017</p>
                     </div>
                 </div>
-            </div>
 
+            </div>
     </section>
     <!-- Blog -->
 
