--- a/toucan/blog.html
+++ b/toucan/blog.html
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="container">
-            <!-- Blog Post -->
+            <!-- Blog Post Preview -->
             <div class="card mb-4">
                 <div class="card-body">
                     <div class="row">
