--- a/toucan/index.html
+++ b/toucan/index.html
@@ -226,7 +226,7 @@
 
           <h2 class="padtop_30 text-color-x padding_10_left">Contact Info</h2>
 
-          <p><a class="text-color-x padding_10_left" href="mailto:email@email.com?Subject=Hello"
+          <p><a class="padding_10_left text-color-x " href="mailto:email@email.com?Subject=Hello"
               target="_blank">email@email.com</a>
           </p>
 
