From theme to template

--- a/toucan/documentation/index.html
+++ b/toucan/documentation/index.html
@@ -8,7 +8,7 @@
 <!-- Favicon -->
 <link rel="icon" href="img/icons/favicon-friend.svg">
 <!-- Title next to favicon -->
-<title>Toucan Theme Documentation</title>
+<title>Toucan template documentation</title>
 <!-- Rich Preview When Sharig on Messages, Whatsapp, the internet in general -->
 <meta property="og:title" content="Friend theme Documentation">
 <meta property="og:image" content="img/icons/preview-img.png">
