--- a/toucan/work-2.html
+++ b/toucan/work-2.html
@@ -9,7 +9,7 @@
     <!-- Favicon -->
     <link rel="icon" href="img/icons/favicon-toucan.svg">
     <!-- Title next to favicon -->
-    <title>Toucan theme</title>
+    <title>Toucan template</title>
     <!-- Rich Preview When Sharig on Messages, Whatsapp, the internet in general -->
     <meta property="og:title" content="Toucan" />
     <meta property="og:image" content="img/icons/preview-img.png">
