--- a/toucan/index.html
+++ b/toucan/index.html
@@ -263,8 +263,8 @@
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom JavaScript for this theme -->
-  <script src="js/scrolling-nav.js"></script>
+  <!-- smooth scroll script -->
+  <script src="vendor/scroll/scrolling-nav.js"></script>
 
   <!-- Custom JavaScript for toggling themes -->
   <script>
