--- a/toucan/documentation/index.html
+++ b/toucan/documentation/index.html
@@ -85,7 +85,7 @@
           <p class="text-color">Thanks for purchasing this theme, this is how everything is organized:</p>
           <pre class="bg-pale-night rounded p-2">
                             <code class="text-white flex-wrap">
-    ../toucan-template
+    ../mint &#40;or any color you chose&#41;
     |
     |                            
     └── ─→ css &#40;folder with all the CSS files needed for theme&#41;
@@ -104,9 +104,11 @@
     |       └── ─→ shop &#40;images for shop page&#41;
     |       |
     |       └── ─→ works &#40;images for work pages&#41;
+    | 
+    ├── ─→ js &#40;folder JavaScript file for smooth scrolling&#41;
     |
     |   
-    ├── ─→ Vendor &#40;Folder with compiled files of Bootstrap, jquery, and the JavaScript for smooth scrolling&#41;
+    ├── ─→ Vendor &#40;folder with compiled files of Bootstrap and jquery&#41;
     |
     |   ↓↓↓↓ <i>These are the only files you need to worry about</i> ↓↓↓↓
     |
