--- a/toucan/documentation/index.html
+++ b/toucan/documentation/index.html
@@ -85,7 +85,7 @@
           <p class="text-color">Thanks for purchasing this theme, this is how everything is organized:</p>
           <pre class="bg-pale-night rounded p-2">
                             <code class="text-white flex-wrap">
-    ../mint &#40;or any color you chose&#41;
+    ./mint &#40;or any color you chose&#41;
     |
     |                            
     └── ─→ css &#40;folder with all the CSS files needed for theme&#41;
