--- a/toucan/work-2.html
+++ b/toucan/work-2.html
@@ -129,7 +129,7 @@
     <!-- Main Content Start -->
 
     <!-- ==================== Work Decription and Credits | Start ============================= -->
-    <section class="bottom_60">
+    <section class="bottom_30">
 
         <div class="container p-0">
             <div class="row  m-0 p-0">
@@ -161,19 +161,62 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div>
-        <img class="img-fluid bottom_60" src="img/works/work-4/pexels-steve-johnson-4735766.jpg" alt="Badges">
+        <img class="img-fluid" src="img/works/work-4/pexels-steve-johnson-4735766.jpg" alt="Badges">
     </div>
     <!-- ======= Full Screen Image  / End ========== -->
 
+    <!--- Next & Previous -->
+    <div class="container-fluid padtop_60">
+        <div class="row p-0">
+            <!-- ======= Full Screen Image  / Start ========== -->
+            <div class="col-lg-6 pl-0">
+                <img class="img-fluid" src="img/works/work-9/pexels-steve-johnson-1509534.jpg" alt="">
+            </div>
+            <!-- ======= Full Screen Image  / End ========== -->
+
+            <!-- ======= Full Screen Image  / Start ========== -->
+            <div class="col-lg-6 pr-0">
+                <img class="img-fluid" src="img/works/work-9/pexels-steve-johnson-1507552.jpg" alt="">
+            </div>
+            <!-- ======= Full Screen Image  / End ========== -->
+
+        </div>
+    </div>
+    <!--- Next & Previous -->
+
+    <!--- Next & Previous -->
+    <div class="container-fluid padtop_60">
+        <div class="row p-0">
+            <!-- ======= Full Screen Image  / Start ========== -->
+            <div class="col-lg-4 pl-0">
+                <img class="img-fluid" src="img/works/work-9/pexels-steve-johnson-1509534.jpg" alt="">
+            </div>
+            <!-- ======= Full Screen Image  / End ========== -->
+
+            <!-- ======= Full Screen Image  / Start ========== -->
+            <div class="col-lg-4">
+                <img class="img-fluid" src="img/works/work-9/pexels-steve-johnson-3704263.jpg" alt="">
+            </div>
+            <!-- ======= Full Screen Image  / End ========== -->
+            <!-- ======= Full Screen Image  / Start ========== -->
+            <div class="col-lg-4 pr-0">
+                <img class="img-fluid" src="img/works/work-9/pexels-steve-johnson-1507552.jpg" alt="">
+            </div>
+            <!-- ======= Full Screen Image  / End ========== -->
+
+        </div>
+    </div>
+    <!--- Next & Previous -->
+
     <!-- ======= Full Screen Image  / Start ========== -->
     <div>
-        <img class="img-fluid bottom_60" src="img/works/work-9/pexels-steve-johnson-3704263.jpg" alt="New elements">
+        <img class="img-fluid padtop_60" src="img/works/work-9/pexels-steve-johnson-3704263.jpg" alt="New elements">
     </div>
     <!-- ======= Full Screen Image  / End ========== -->
 
     <!-- ======= portfolio carousel | Start ======= -->
     <section>
-        <div id="item-1" class="carousel slide bottom_60" data-ride="carousel" data-interval="false">
+        <div id="item-1" class="carousel slide padtop_60" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100 img-fluid" src="img/works/work-1/pexels-steve-johnson-1724888.jpg"
@@ -198,20 +241,8 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div>
-        <img class="img-fluid bottom_60"
+        <img class="img-fluid padtop_60"
             src="https://via.placeholder.com/1920x1080/C7C7C7/232325/?text=Full width Image" alt="">
-    </div>
-    <!-- ======= Full Screen Image  / End ========== -->
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div>
-        <img class="img-fluid bottom_60" src="img/works/work-9/pexels-steve-johnson-1509534.jpg" alt="">
-    </div>
-    <!-- ======= Full Screen Image  / End ========== -->
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div>
-        <img class="img-fluid" src="img/works/work-9/pexels-steve-johnson-1507552.jpg" alt="">
     </div>
     <!-- ======= Full Screen Image  / End ========== -->
 
