--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -89,6 +89,9 @@
               <a href="index.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
+              <a href="https://peterverastegui.wordpress.com/">Blog</a>
+            </li>
+            <li class="scroll">
               <a href="index.html#about">About</a>
             </li>
             <li class="scroll">
