--- a/es.html
+++ b/es.html
@@ -71,6 +71,9 @@
               <a href="#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
+              <a href="https://peterverastegui.wordpress.com/">Blog</a>
+            </li>
+            <li class="scroll">
               <a href="#about">Acerca de mi</a>
             </li>
             <li class="scroll">
