--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a href="#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
-              <a href="Shop.html">Shop</a>
+              <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
               <a href="#about">About</a>
