--- a/es-Library-of-Congress.html
+++ b/es-Library-of-Congress.html
@@ -68,6 +68,9 @@
               <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
+              <a href="https://peterverastegui.wordpress.com/">Blog</a>
+            </li>
+            <li class="scroll">
               <a href="es.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
